# jaxrs-spec-generated/src/main/java/fi/metatavu/jouko/server/rest/AdminApi.java
@@ -4,6 +4,7 @@ import fi.metatavu.jouko.server.rest.model.Device;
 import fi.metatavu.jouko.server.rest.model.InternalServerError;
 import fi.metatavu.jouko.server.rest.model.InterruptionGroup;
 import fi.metatavu.jouko.server.rest.model.Unauthorized;
+import fi.metatavu.jouko.server.rest.model.User;
 
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
@@ -21,10 +22,23 @@ import java.lang.Exception;
 @Api(description = "the admin API")
 @Consumes({ "application/json;charset=utf-8" })
 @Produces({ "application/json;charset=utf-8" })
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2018-06-01T07:44:53.730Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2018-06-05T07:54:42.840Z")
 
 
 public interface AdminApi  {
+
+    @POST
+    @Path("/devices")
+    @Consumes({ "application/json;charset&#x3D;utf-8" })
+    @Produces({ "application/json;charset&#x3D;utf-8" })
+    @ApiOperation(value = "Create device", notes = "", response = Device.class, authorizations = {
+        @Authorization(value = "bearer")
+    }, tags={ "Devices",  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = Device.class),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response createDevice(@Valid Device body) throws Exception;
 
     @POST
     @Path("/interruptiongroups/")
@@ -38,6 +52,19 @@ public interface AdminApi  {
         @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
         @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
     public Response createInterruptionGroup(@Valid InterruptionGroup body) throws Exception;
+
+    @POST
+    @Path("/users")
+    @Consumes({ "application/json;charset&#x3D;utf-8" })
+    @Produces({ "application/json;charset&#x3D;utf-8" })
+    @ApiOperation(value = "Create user", notes = "", response = User.class, authorizations = {
+        @Authorization(value = "bearer")
+    }, tags={ "Users",  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = User.class),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response createUser(@Valid User body) throws Exception;
 
     @GET
     @Path("/devices")
@@ -53,6 +80,19 @@ public interface AdminApi  {
     public Response listAllDevices(@QueryParam("firstResult") @NotNull   @ApiParam("The offset of the first result")  Integer firstResult,@QueryParam("maxResults") @NotNull   @ApiParam("The maximum number of results")  Integer maxResults) throws Exception;
 
     @GET
+    @Path("/users")
+    @Consumes({ "application/json;charset&#x3D;utf-8" })
+    @Produces({ "application/json;charset&#x3D;utf-8" })
+    @ApiOperation(value = "List all users", notes = "", response = User.class, responseContainer = "List", authorizations = {
+        @Authorization(value = "bearer")
+    }, tags={ "Users",  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = User.class, responseContainer = "List"),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response listAllUsers(@QueryParam("firstResult") @NotNull   @ApiParam("The offset of the first result")  Integer firstResult,@QueryParam("maxResults") @NotNull   @ApiParam("The maximum number of results")  Integer maxResults) throws Exception;
+
+    @GET
     @Path("/interruptiongroups/")
     @Consumes({ "application/json;charset&#x3D;utf-8" })
     @Produces({ "application/json;charset&#x3D;utf-8" })
@@ -64,6 +104,19 @@ public interface AdminApi  {
         @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
         @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
     public Response listInterruptionGroups(@QueryParam("firstResult") @NotNull   @ApiParam("The offset of the first result")  Integer firstResult,@QueryParam("maxResults") @NotNull   @ApiParam("The maximum number of results")  Integer maxResults) throws Exception;
+
+    @GET
+    @Path("/devices/{deviceId}")
+    @Consumes({ "application/json;charset&#x3D;utf-8" })
+    @Produces({ "application/json;charset&#x3D;utf-8" })
+    @ApiOperation(value = "Retreive device", notes = "", response = Device.class, authorizations = {
+        @Authorization(value = "bearer")
+    }, tags={ "Devices",  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = Device.class),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response retrieveDevice(@PathParam("deviceId") @ApiParam("The id of the device") Long deviceId) throws Exception;
 
     @GET
     @Path("/interruptiongroups/{groupId}")
@@ -78,16 +131,55 @@ public interface AdminApi  {
         @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
     public Response retrieveInterruptionGroup(@PathParam("groupId") @ApiParam("The id of the interruption group") Long groupId) throws Exception;
 
+    @GET
+    @Path("/users/{userId}")
+    @Consumes({ "application/json;charset&#x3D;utf-8" })
+    @Produces({ "application/json;charset&#x3D;utf-8" })
+    @ApiOperation(value = "Retreive user", notes = "", response = User.class, authorizations = {
+        @Authorization(value = "bearer")
+    }, tags={ "Users",  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = User.class),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response retrieveUser(@PathParam("userId") @ApiParam("The id of the user") Long userId) throws Exception;
+
+    @PUT
+    @Path("/devices/{deviceId}")
+    @Consumes({ "application/json;charset&#x3D;utf-8" })
+    @Produces({ "application/json;charset&#x3D;utf-8" })
+    @ApiOperation(value = "Update device", notes = "", response = Device.class, authorizations = {
+        @Authorization(value = "bearer")
+    }, tags={ "Devices",  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = Device.class),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response updateDevice(@PathParam("deviceId") @ApiParam("The id of the device") Long deviceId,@Valid Device newDevice) throws Exception;
+
     @PUT
     @Path("/interruptiongroups/{groupId}")
     @Consumes({ "application/json;charset&#x3D;utf-8" })
     @Produces({ "application/json;charset&#x3D;utf-8" })
     @ApiOperation(value = "Update interruption group", notes = "", response = InterruptionGroup.class, authorizations = {
         @Authorization(value = "bearer")
-    }, tags={ "Interruptions" })
+    }, tags={ "Interruptions",  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "Success", response = InterruptionGroup.class),
         @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
         @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
     public Response updateInterruptionGroup(@PathParam("groupId") @ApiParam("The id of the interruption group") Long groupId,@Valid InterruptionGroup body) throws Exception;
+
+    @PUT
+    @Path("/users/{userId}")
+    @Consumes({ "application/json;charset&#x3D;utf-8" })
+    @Produces({ "application/json;charset&#x3D;utf-8" })
+    @ApiOperation(value = "Update user", notes = "", response = User.class, authorizations = {
+        @Authorization(value = "bearer")
+    }, tags={ "Users" })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = User.class),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response updateUser(@PathParam("userId") @ApiParam("The id of the user") Long userId,@Valid User body) throws Exception;
 }
