# swagger.yaml
@@ -172,7 +172,7 @@ paths:
       parameters:
         - name: body
           in: body
-          description: The cancellation status
+          description: The device to be created
           required: true
           schema:
             $ref: '#/definitions/Device'
@@ -227,6 +227,12 @@ paths:
           required: true
           type: integer
           format: int64
+        - name: newDevice
+          in: body
+          description: The new data for the device
+          required: true
+          schema:
+            $ref: '#/definitions/Device'
       responses:
         '200':
           description: Success
@@ -280,7 +286,7 @@ paths:
       parameters:
         - name: body
           in: body
-          description: The cancellation status
+          description: The user to be created
           required: true
           schema:
             $ref: '#/definitions/User'
@@ -335,6 +341,12 @@ paths:
           required: true
           type: integer
           format: int64
+        - name: body
+          in: body
+          description: The user to be updated
+          required: true
+          schema:
+            $ref: '#/definitions/User'
       responses:
         '200':
           description: Success
